--- a/oefening1.html
+++ b/oefening1.html
@@ -14,7 +14,7 @@
             robotArm.moveRight();
             robotArm.grab();
             robotArm.moveLeft();
-            robotArm.drop()
+            robotArm.drop();
 
             
             // De door jou opgegeven instructies uitvoeren
